// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storybook snapshot tests Storyshots Examples/Layouts One To One Call Layout 1`] = `
<div
  className="css-61 body-0"
>
  <div
    className="css-61"
    data-uses-unhanded-props={true}
    dir="ltr"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": "100vh",
          "justifyContent": "center",
        }
      }
    >
      <div
        className="ms-Stack css-2"
        style={
          Object {
            "border": "1px",
            "height": "500px",
            "width": "600px",
          }
        }
      >
        <div
          className="ms-Stack css-9"
        >
          <div
            className="ms-Stack css-10"
          >
            <div
              className="ms-Stack css-12"
            >
              <div
                aria-label=""
                className="ms-Persona ms-Persona--size100 root-13"
              >
                <div
                  className="ms-Persona-coin ms-Persona--size100 coin-20"
                  role="presentation"
                >
                  <div
                    className="ms-Persona-imageArea imageArea-22"
                    role="presentation"
                  >
                    <div
                      aria-hidden="true"
                      className="ms-Persona-initials initials-25"
                    >
                      <span>
                        H
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ms-Stack css-80 css-28"
          >
            <div
              className="ms-Stack css-29"
            >
              <span
                className="css-30"
              >
                Holly
              </span>
            </div>
            <div
              className="ms-Stack css-31"
            />
          </div>
          <div
            className="ms-Stack css-32"
          >
            <div
              className="ms-Stack css-9"
            >
              <div
                className="ms-Stack css-10"
              >
                <div
                  className="ms-Persona ms-Persona--size56 root-33"
                >
                  <div
                    className="ms-Persona-coin ms-Persona--size56 coin-20"
                    role="presentation"
                  >
                    <div
                      className="ms-Persona-imageArea imageArea-36"
                      role="presentation"
                    >
                      <div
                        aria-hidden="true"
                        className="ms-Persona-initials initials-39"
                      >
                        <span>
                          T
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="ms-Stack css-80 css-28"
              >
                <div
                  className="ms-Stack css-29"
                />
                <div
                  className="ms-Stack css-31"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots Examples/Layouts Screen Share Layout 1`] = `
<div
  className="css-61 body-0"
>
  <div
    className="css-61"
    data-uses-unhanded-props={true}
    dir="ltr"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": "100vh",
          "justifyContent": "center",
        }
      }
    >
      <div
        className="ms-Stack css-7"
        style={
          Object {
            "border": ".063rem",
            "height": "500px",
            "width": "850px",
          }
        }
      >
        <div
          className="ms-StackItem css-8"
        >
          <div
            className="ms-Stack css-9"
          >
            <div
              className="ms-Stack css-10"
            >
              <div
                className="ms-Stack css-11"
              >
                <div
                  className="ms-Stack css-17"
                >
                  <div
                    className="ms-Stack css-18"
                  >
                    <div
                      className="ms-Persona ms-Persona--size56 root-19"
                    >
                      <div
                        className="ms-Persona-coin ms-Persona--size56 coin-26"
                        role="presentation"
                      >
                        <div
                          className="ms-Persona-imageArea imageArea-28"
                          role="presentation"
                        >
                          <div
                            aria-hidden="true"
                            className="ms-Persona-initials initials-31"
                          >
                            <span>
                              M
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="ms-Stack css-80 css-34"
                  >
                    <div
                      className="ms-Stack css-35"
                    >
                      <span
                        className="css-36"
                      >
                        Michael
                      </span>
                    </div>
                    <div
                      className="ms-Stack css-37"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Stack css-10"
            >
              <div
                className="ms-Stack css-11"
              >
                <div
                  className="ms-Stack css-17"
                >
                  <div
                    className="ms-Stack css-18"
                  >
                    <div
                      className="ms-Persona ms-Persona--size56 root-19"
                    >
                      <div
                        className="ms-Persona-coin ms-Persona--size56 coin-26"
                        role="presentation"
                      >
                        <div
                          className="ms-Persona-imageArea imageArea-28"
                          role="presentation"
                        >
                          <div
                            aria-hidden="true"
                            className="ms-Persona-initials initials-38"
                          >
                            <span>
                              J
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="ms-Stack css-80 css-34"
                  >
                    <div
                      className="ms-Stack css-35"
                    >
                      <span
                        className="css-36"
                      >
                        Jim
                      </span>
                    </div>
                    <div
                      className="ms-Stack css-37"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Stack css-10"
            >
              <div
                className="ms-Stack css-11"
              >
                <div
                  className="ms-Stack css-17"
                >
                  <div
                    className="ms-Stack css-18"
                  >
                    <div
                      className="ms-Persona ms-Persona--size56 root-19"
                    >
                      <div
                        className="ms-Persona-coin ms-Persona--size56 coin-26"
                        role="presentation"
                      >
                        <div
                          className="ms-Persona-imageArea imageArea-28"
                          role="presentation"
                        >
                          <div
                            aria-hidden="true"
                            className="ms-Persona-initials initials-39"
                          >
                            <span>
                              P
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="ms-Stack css-80 css-34"
                  >
                    <div
                      className="ms-Stack css-35"
                    >
                      <span
                        className="css-36"
                      >
                        Pam
                      </span>
                    </div>
                    <div
                      className="ms-Stack css-37"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Stack css-10"
            >
              <div
                className="ms-Stack css-11"
              >
                <div
                  className="ms-Stack css-17"
                >
                  <div
                    className="ms-Stack css-18"
                  >
                    <div
                      className="ms-Persona ms-Persona--size56 root-19"
                    >
                      <div
                        className="ms-Persona-coin ms-Persona--size56 coin-26"
                        role="presentation"
                      >
                        <div
                          className="ms-Persona-imageArea imageArea-28"
                          role="presentation"
                        >
                          <div
                            aria-hidden="true"
                            className="ms-Persona-initials initials-40"
                          >
                            <span>
                              D
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="ms-Stack css-80 css-34"
                  >
                    <div
                      className="ms-Stack css-35"
                    >
                      <span
                        className="css-36"
                      >
                        Dwight
                      </span>
                    </div>
                    <div
                      className="ms-Stack css-37"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Stack css-10"
            >
              <div
                className="ms-Stack css-11"
              >
                <div
                  className="ms-Stack css-17"
                >
                  <div
                    className="ms-Stack css-18"
                  >
                    <div
                      className="ms-Persona ms-Persona--size56 root-19"
                    >
                      <div
                        className="ms-Persona-coin ms-Persona--size56 coin-26"
                        role="presentation"
                      >
                        <div
                          className="ms-Persona-imageArea imageArea-28"
                          role="presentation"
                        >
                          <div
                            aria-hidden="true"
                            className="ms-Persona-initials initials-41"
                          >
                            <span>
                              K
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="ms-Stack css-80 css-34"
                  >
                    <div
                      className="ms-Stack css-35"
                    >
                      <span
                        className="css-36"
                      >
                        Kelly
                      </span>
                    </div>
                    <div
                      className="ms-Stack css-37"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Stack css-10"
            >
              <div
                className="ms-Stack css-11"
              >
                <div
                  className="ms-Stack css-17"
                >
                  <div
                    className="ms-Stack css-18"
                  >
                    <div
                      className="ms-Persona ms-Persona--size56 root-19"
                    >
                      <div
                        className="ms-Persona-coin ms-Persona--size56 coin-26"
                        role="presentation"
                      >
                        <div
                          className="ms-Persona-imageArea imageArea-28"
                          role="presentation"
                        >
                          <div
                            aria-hidden="true"
                            className="ms-Persona-initials initials-42"
                          >
                            <span>
                              R
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="ms-Stack css-80 css-34"
                  >
                    <div
                      className="ms-Stack css-35"
                    >
                      <span
                        className="css-36"
                      >
                        Ryan
                      </span>
                    </div>
                    <div
                      className="ms-Stack css-37"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Stack css-10"
            >
              <div
                className="ms-Stack css-11"
              >
                <div
                  className="ms-Stack css-17"
                >
                  <div
                    className="ms-Stack css-18"
                  >
                    <div
                      className="ms-Persona ms-Persona--size56 root-19"
                    >
                      <div
                        className="ms-Persona-coin ms-Persona--size56 coin-26"
                        role="presentation"
                      >
                        <div
                          className="ms-Persona-imageArea imageArea-28"
                          role="presentation"
                        >
                          <div
                            aria-hidden="true"
                            className="ms-Persona-initials initials-43"
                          >
                            <span>
                              A
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="ms-Stack css-80 css-34"
                  >
                    <div
                      className="ms-Stack css-35"
                    >
                      <span
                        className="css-36"
                      >
                        Andy
                      </span>
                    </div>
                    <div
                      className="ms-Stack css-37"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="ms-StackItem css-44"
        >
          <div
            className="ms-Stack css-17"
          >
            <div
              className="ms-Stack css-18"
            >
              <div
                className="ms-Stack css-46"
              >
                <div
                  className="ms-Stack css-47"
                >
                  Your Screen Share Stream
                </div>
              </div>
            </div>
            <div
              className="ms-Stack css-80 css-34"
            >
              <div
                className="ms-Stack css-35"
              />
              <div
                className="ms-Stack css-37"
              />
            </div>
            <div
              className="ms-Stack css-48"
            >
              <div
                className="ms-Stack css-17"
              >
                <div
                  className="ms-Stack css-18"
                >
                  <div
                    className="ms-Persona ms-Persona--size56 root-19"
                  >
                    <div
                      className="ms-Persona-coin ms-Persona--size56 coin-26"
                      role="presentation"
                    >
                      <div
                        className="ms-Persona-imageArea imageArea-28"
                        role="presentation"
                      >
                        <div
                          aria-hidden="true"
                          className="ms-Persona-initials initials-49"
                        >
                          <span>
                            T
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="ms-Stack css-80 css-34"
                >
                  <div
                    className="ms-Stack css-35"
                  />
                  <div
                    className="ms-Stack css-37"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
